# SYCL_study

./: CMakeLists.txt  README.md  computation_test.cpp
example/: 01_HelloSycl.cpp  02_mat2d.cpp  03_cmp-cuda.cu  03_nd-range.cpp  04_cmp-cuda.cu  04_h-item.cpp  05_device.cpp  CMakeLists.txt
example/cpg/: cpg_array_tuple_vector_operations.hpp  cpg_bitwise.hpp  cpg_chrono_random.hpp  cpg_combinatorics.hpp  cpg_conversion.hpp  cpg_functional.hpp  cpg_iterator.hpp  cpg_opencl_sycl.hpp  cpg_parallel.hpp  cpg_rational.hpp  cpg_std_array_operations.hpp  cpg_std_array_tuple_operations.hpp  cpg_std_extensions.hpp  cpg_track_new.hpp  cpg_tuple_operations.hpp  cpg_types.hpp  cpg_vector_operations.hpp  generate_table.cpp  permu_combi_table.cxx
practice/: 1_show_all_devices.cpp  3_computation_test2.cpp  CMakeLists.txt
